apply plugin: 'com.android.library'
apply plugin: 'com.novoda.bintray-release'

buildscript {
    repositories { jcenter() }
    dependencies { classpath 'com.novoda:bintray-release:0.8.1' }
}


ext {
    libraryName = 'tool-dialog'
    libraryDescription = "dialogs"
}


android {
    compileSdkVersion 27
    buildToolsVersion '26.0.2'

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    defaultConfig {
        minSdkVersion 16
        targetSdkVersion 27
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        debug {
            minifyEnabled false
            useProguard false
        }
        release {
            minifyEnabled true
            useProguard true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    // Encapsulates options for running tests.
    testOptions {
        // Changes the directory where Gradle saves test reports. By default, Gradle saves test reports
        // in the path_to_your_project/module_name/build/outputs/reports/ directory.
        // '$rootDir' sets the path relative to the root directory of the current project.
        reportDir "$rootDir/test-reports"
    }

    testOptions {
        // Encapsulates options for local unit tests.
        unitTests {
            // Encapsulates options for controlling how Gradle executes local unit tests. For a list
            // of all the options you can specify, read Gradle's reference documentation.
            all {
                jvmArgs '-XX:MaxPermSize=256m'
             }
        }
    }
}

dependencies {
    implementation project(path: ':tool-core')
    implementation "com.android.support:appcompat-v7:27.1.1"
    implementation "com.android.support:support-annotations:27.1.1"

    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'com.android.support.test:runner:1.0.1'
}

publish {
    userOrg = bintrayUser
    groupId = libraryGroup
    artifactId = libraryName
    desc = libraryDescription
    publishVersion = versionName
    website = siteUrl
    bintrayUser = bintrayUserName
    bintrayKey = bintrayApikey
    dryRun = false
    autoPublish = true
}

